# logos-container-subprocess

./: .gitignore  CMakeLists.txt  README.md  flake.nix
cmake/: LogosContainerImplConfig.cmake
nix/: build.nix  default.nix  include.nix  lib.nix  tests.nix
src/: CMakeLists.txt  subprocess_container.cpp  subprocess_container.h  subprocess_container_factory.cpp  token_receiver.cpp
tests/: CMakeLists.txt  test_subprocess_container.cpp
